# SDGCommandLine

./: .Workspace Configuration.txt  .gitattributes  .gitignore  .travis.yml  Package.pins  Package.resolved  Package.swift  README.md  Refresh (macOS).command  Workspace.swift  index.html
.github/: CONTRIBUTING.md
.github/workflows/: Amazon Linux.yaml  Android.yaml  CentOS.yaml  Documentation Deployment.yaml  Miscellaneous.yaml  Swift 5.4 Amazon Linux.yaml  Swift 5.4 Android.yaml  Swift 5.4 CentOS.yaml  Swift 5.4 Ubuntu.yaml  Swift 5.4 Web.yaml  Swift 5.4 Windows.yaml  Swift 5.4 iOS.yaml  Swift 5.4 macOS.yaml  Swift 5.4 tvOS.yaml  Swift 5.4 watchOS.yaml  Swift 5.5 Amazon Linux.yaml  Swift 5.5 Android.yaml  Swift 5.5 CentOS.yaml  Swift 5.5 Ubuntu.yaml  Swift 5.5 macOS.yaml  Swift 5.7 (Amazon Linux).yaml  Swift 5.7 (Android).yaml  Swift 5.7 (Ubuntu).yaml  Swift 5.7 (Web).yaml  Swift 5.7 (Windows).yaml  Swift 5.7 (iOS).yaml  Swift 5.7 (macOS).yaml  Swift 5.7 (tvOS).yaml  Swift 5.7 (watchOS).yaml  Ubuntu.yaml  Web.yaml  Windows.yaml  Workspace Validation.yaml  iOS.yaml  macOS.yaml  tvOS.yaml  watchOS.yaml
.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Documentation/: Related Projects.md  🇨🇦EN Read Me.md  🇨🇦EN Related Projects.md
SDGCommandLine/: metadata.json
SDGCommandLine/data/documentation/: sdgcommandline.json
SDGCommandLineTestUtilities/: metadata.json
SDGCommandLineTestUtilities/data/documentation/: sdgcommandlinetestutilities.json
SDGCommandLineTestUtilities/documentation/sdgcommandlinetestutilities/: index.html
SDGCommandLineTestUtilities/index/: index.json
SDGExportedCommandLineInterface/: metadata.json
SDGExportedCommandLineInterface/data/documentation/: sdgexportedcommandlineinterface.json
SDGExportedCommandLineInterface/index/: index.json
Sources/SDGCommandLine/: Command.swift  Error.swift  Exports.swift  Initialization.swift  Int.swift  ProcessInfo.swift  SDGCornerstone.swift  Tool.swift
Sources/SDGCommandLine/Argument/: AnyArgumentTypeDefinition.swift  ArgumentInterface.swift  ArgumentType.swift  ArgumentTypeDefinition.swift  Arguments.swift  DirectArguments.swift
Sources/SDGCommandLine/Command/: Command.Error.swift  Command.Output.swift  Command.swift  EmptyCache.swift  ExportInterface.swift  Help.swift  SetLanguage.swift  VersionSubcommand.swift
Sources/SDGCommandLine/External Tools/: ExternalTool.swift  Git.swift  Swift.swift  Xcode.swift
Sources/SDGCommandLine/Localization/: APILocalization.swift  ContentLocalization.swift  InterfaceLocalization.swift  SystemLocalization.swift
Sources/SDGCommandLine/Option/: AnyOption.swift  Option.swift  OptionInterface.swift  Options.swift
Sources/SDGCommandLine/Output/: Colour.swift  FontWeight.swift  StringFamily.swift  TextFormat.swift  Underline.swift
Sources/SDGCommandLine/Package/: Build.swift  Package.swift  PackageRepository.swift  Version.swift
Sources/SDGCommandLineLocalizations/: APILocalization.swift  Exports.swift  InterfaceLocalization.swift  SystemLocalization.swift
Sources/SDGCommandLineTestUtilities/: Command.swift  Exports.swift
Sources/SDGExportedCommandLineInterface/: ArgumentInterface.swift  Command.swift  CommandInterface.Version1.swift  CommandInterface.Version2.swift  CommandInterface.swift  DecodedCommandInterface.swift  OptionInterface.swift
Sources/test‐tool/: main.swift
Tests/: LinuxMain.swift
Tests/DebugTests/: DebugTests.swift
Tests/SDGCommandLineTests/: APITests.swift  InternalTests.swift  RepositoryRoot.swift  TestCase.swift  WindowsTestPatches.swift  XCTestManifests.swift
Tests/SDGCommandLineTests/API Tests/: CommandTests.swift
Tests/SDGCommandLineTests/All Tests/: APITests.swift  InternalTests.swift
Tests/SDGCommandLineTests/Example Types/: Language.swift
Tests/SDGCommandLineTests/Examples/: ReadMe.swift
Tests/SDGCommandLineTests/Test Helpers/: TestCase.swift  Throwing.swift
Tests/SDGExportedCommandLineInterfaceTests/: APITests.swift  InternalTests.swift  XCTestManifests.swift
Tests/Test Specifications/Exports/: Version 1.json  Version 2.json
Tests/TestTool/: DemonstrateRepeatedArgument.swift  DemonstrateTextFormatting.swift  Execute.swift  Fail.swift  Language.swift  RejectArgument.swift  Tool.swift
Tests/WindowsTests/: main.swift
Tests/empty_tool/: Empty.swift  main.swift
Tests/empty‐tool/: Empty.swift  main.swift
Tests/test_tool/: Tool.swift  main.swift
Tests/test‐tool/: Tool.swift  main.swift
docs/Linux/: Enums.html  Extensions.html  Functions.html  Guides.html  Protocols.html  Structs.html  index.html  related-projects.html  search.json
docs/Linux/Enums/: Colour.html  FontWeight.html  Underline.html
docs/Linux/Extensions/: StringFamily.html
docs/Linux/Protocols/: TextFormat.html
docs/Linux/Structs/: ArgumentType.html  ArgumentTypeDefinition.html  Command.html  DirectArguments.html  Option.html  Options.html
docs/SDGCommandLine/: Extensions.html  Structs.html  en-read-me.html  en-related-projects.html  search.json
docs/SDGCommandLine/Enums/: ArgumentType.html
docs/macOS/: Enums.html  Extensions.html  Functions.html  Guides.html  Protocols.html  Structs.html  index.html  related-projects.html  search.json
docs/macOS/Enums/: ArgumentType.html  (+3 more)
🇨🇦EN/: About.html  Importing.html  Related Projects.html  SDGCommandLine.html  index.html
🇨🇦EN/Extensions/: ProcessInfo.html  StringFamily.html
🇨🇦EN/Functions/: testCommand(_:with:in:localizations:uniqueTestName:allowColour:postprocess:overwriteSpecificationInsteadOfFailing:file:line:).html
🇨🇦EN/Libraries/: SDGCommandLine.html  SDGCommandLineTestUtilities.html  SDGExportedCommandLineInterface.html
🇨🇦EN/Modules/: SDGCommandLine.html  SDGCommandLineTestUtilities.html  SDGExportedCommandLineInterface.html
🇨🇦EN/Protocols/: AnyArgumentTypeDefinition.html  AnyOption.html  TextFormat.html  Tool.html
🇨🇦EN/Types/: ArgumentInterface.html  ArgumentType.html  ArgumentTypeDefinition<Type>.html  Colour.html  Command.html  CommandInterface.html  DirectArguments.html  FontWeight.html  Option<Type>.html  OptionInterface.html  Options.html  Underline.html
(+727 files in other folders)
